added new features in test 4

--- a/Test-4/index.html
+++ b/Test-4/index.html
@@ -11,15 +11,15 @@
 </head>
 
 <body>
-    <section class="wrapper">
+    <section class="wrapper" id="Home">
         <nav>
             <p>LOGO</p>
             <ul class="nav-left">
-                <li><a href="">Home</a></li>
-                <li><a href="">Services</a></li>
+                <li><a href="#Home">Home</a></li>
+                <li><a href="#services">Services</a></li>
                 <li><a href="">Portfolio</a></li>
-                <li><a href="">About us</a></li>
-                <li><a href="">Contact utos</a></li>
+                <li><a href="#about">About us</a></li>
+                <li><a href="#contact">Contact us</a></li>
             </ul>
             <p class="hamburger"><i class="fa-solid fa-bars"></i></p>
         </nav>
@@ -34,7 +34,7 @@
 
     </section>
 
-    <section class="services">
+    <section class="services" id="services">
         <div class="our-services">
             <h1>Our Services</h1>
             <p>Explore our wide range of camping gear services.</p>
@@ -89,7 +89,7 @@
         </div> -->
     </section>
 
-    <section class="aboutUs">
+    <section class="aboutUs" id="about">
         <div class="our-services">
             <h1>About Us</h1>
             <p>Discover our story in providing camping services.</p>
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    <section class="contactUs">
+    <section class="contactUs" id="contact">
         <div class="our-services">
             <h1>Contact Us</h1>
             <p>Reach out to us for any inquiries or feedback.</p>
