added javaScript first project age calculaton

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>All Weekly Tests files are Available Here</h1>
     <button><a href=".//Test-2 HTML/index.html">Click to go to Test-2 HTML</a></button><br>
-    <button><a href=".//Test-3 CSS Properties/index.html">Click to go to Test-3 CSS Properties</a></button>
-    <button><a href="./Test-4/index.html">Click to go to Test-4 CSS Properties</a></button>
+    <button><a href=".//Test-3 CSS Properties/index.html">Click to go to Test-3 CSS Properties</a></button><br>
+    <button><a href="./Test-4/index.html">Click to go to Test-4 CSS Properties</a></button><br>
+    <button><a href="./JavaScript Weekly Test/index.html">Click to go to JavaScript Weerkly Test</a></button><br>
+
+
 </body>
 </html>
