added new test assignment

--- a/JavaScript Weekly Test/index.html
+++ b/JavaScript Weekly Test/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome To JavaSript Weeklt Test</h1>
     <button><a href="./Age_Calculator/index.html">Click to go to Age Calculator Weekly Test-2 </a></button><br>
+    <button><a href="./PhoneHunting/index.html">Click to go to Age Calculator Weekly Test-4 </a></button><br>
 </body>
 </html>
